--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -3,12 +3,18 @@
 
 <div class="main">
     <div class="container d-flex flex-column flex-md-row">
+        <!--
         <div class="col-md-9 px-1 py-4 pr-md-4 border-bottom border-md-bottom-0 border-md-right">
             @Body
         </div>
 
         <div class="col-md-3 px-1 py-4 pl-md-4">
             <Sidebar />
+        </div>
+        -->
+
+        <div class="px-2 py-4">
+            @Body
         </div>
     </div>
 </div>
