--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -41,6 +41,10 @@ html, body {
 
 /****************** Bootstrap Overwrite *******************/
 
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 1.2rem;
+}
+
 .navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
 }
