--- a/Shared/Header.razor
+++ b/Shared/Header.razor
@@ -1,7 +1,11 @@
-<div class="header bg-theme-light text-white mb-4">
+<div class="header text-theme-color mb-4">
     <div class="container d-flex flex-column flex-md-row">
-        <div class="navbar navbar-dark">
-            <h1 class="my-3 m-md-auto">@Title</h1>
+        <div class="navbar navbar-light">
+            <!--h1 class="my-3 m-md-auto">@Title</h1-->
+            <a class="navbar-brand" href="">
+                <img height="35px" src="images/logo.png" />
+            </a>
+            
             <button class="navbar-toggler" @onclick="ToggleNavMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
