--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 <Header Title="Project Asuka" />
 
 <div class="main">
-    <div class="container d-flex flex-column flex-md-row">
+    <div class="container d-flex flex-column px-4 py-4">
         <!--
         <div class="col-md-9 px-1 py-4 pr-md-4 border-bottom border-md-bottom-0 border-md-right">
             @Body
@@ -12,9 +12,7 @@
             <Sidebar />
         </div>
         -->
+        @Body
 
-        <div class="px-2 py-4">
-            @Body
-        </div>
     </div>
 </div>
