--- a/Pages/Todo.razor
+++ b/Pages/Todo.razor
@@ -1,6 +1,6 @@
 @page "/todo"
 
-<h2>Todo (@todos.Count(todo => !todo.IsDone))</h2>
+<h2>Todo: @todos.Count(todo => !todo.IsDone)</h2>
 <div class="mt-3" style="max-width: 500px;">
     @foreach(var todo in todos) {
         <div class="input-group mb-3">
