--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -41,8 +41,21 @@ html, body {
 
 /****************** Bootstrap Overwrite *******************/
 
+body {
+    color: #666;
+}
+
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1.2rem;
+}
+
+p {
+    font-size: large;
+}
+
+.navbar-brand {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
 }
 
 .navbar-toggler {
@@ -58,12 +71,12 @@ html, body {
     padding: 15px;
     font-size: 1.1rem;
     font-weight: bold;
-    color: #fff;
+    color: #80c5c2;
 }
 
 .header .nav-link.focus,
 .header .nav-link:focus {
-    color: #fff;
+    color: #80c5c2;
 }
 
 .header .nav-link.active,
@@ -109,6 +122,7 @@ html, body {
         padding: 40px 30px 30px 30px;
         font-size: 1.2rem;
         font-weight: bold;
+        border-bottom: 4px solid transparent;
     }
 
     .header .nav-link.active,
@@ -125,6 +139,10 @@ html, body {
 
 .bg-theme-dark {
     background-color: #20B2AA;
+}
+
+.text-theme-color {
+    color: #80c5c2;
 }
 
 .header h1 {
